--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -17,7 +17,7 @@ spec:
           image: thanhdat27/multi-client
           resources:
             limits:
-              memory: '128Mi'
-              cpu: '500m'
+              memory: "128Mi"
+              cpu: "100m"
           ports:
             - containerPort: 3000
