--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -21,8 +21,8 @@ spec:
           image: postgres
           resources:
             limits:
-              memory: '128Mi'
-              cpu: '500m'
+              memory: "128Mi"
+              cpu: "100m"
           ports:
             - containerPort: 5432
           volumeMounts:
