--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -17,10 +17,10 @@ spec:
           image: thanhdat27/multi-worker
           resources:
             limits:
-              memory: '128Mi'
-              cpu: '500m'
+              memory: "128Mi"
+              cpu: "100m"
           env:
             - name: REDIS_HOST
               value: redis-cluster-ip-service
             - name: REDIS_PORT
-              value: '6379'
+              value: "6379"
