--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -17,21 +17,21 @@ spec:
           image: thanhdat27/multi-server
           resources:
             limits:
-              memory: '128Mi'
-              cpu: '500m'
+              memory: "128Mi"
+              cpu: "100m"
           ports:
             - containerPort: 5000
           env:
             - name: REDIS_HOST
               value: redis-cluster-ip-service
             - name: REDIS_PORT
-              value: '6379'
+              value: "6379"
             - name: PGUSER
               value: postgres
             - name: PGHOST
               value: postgres-cluster-ip-service
             - name: PGPORT
-              value: '5432'
+              value: "5432"
             - name: PGDATABASE
               value: postgres
             - name: PGPASSWORD
